# curate

./: .gitignore  CHANGELOG.md  DEDUP_IMPLEMENTATION_REPORT.md  LICENSE  README.md  RENAME_IMPLEMENTATION_REPORT.md  SKILL.md  curate  install.sh  pyproject.toml
src/curate/: __init__.py  cli.py
src/curate/commands/: __init__.py  clean.py  consolidate.py  dedup.py  rename.py  snapshot.py  sort.py
src/curate/core/: __init__.py  hashing.py  permissions.py  progress.py  safety.py  transaction.py
src/curate/lib/: consolidator.py  dedup_engine.py  scanner.py  sorter.py
tests/: __init__.py  test_clean.py  test_consolidate.py  test_core.py  test_dedup.py  test_rename.py  test_snapshot.py  test_sort.py
