[project]
name = "curate"
version = "0.1.0"
description = "File system curation toolkit — dedup, sort, clean, snapshot, consolidate"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
media = ["Pillow>=10.0", "mutagen>=1.47"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
curate = "curate.cli:cli"
